[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-fetch"
version = "1.0.0"
description = "YouTube 頻道影片下載工具"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "SanHsien", email = "sanhsien (at) gmail.com"}
]
keywords = ["youtube", "download", "video", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "yt-dlp>=2023.12.30",
    "imageio-ffmpeg>=0.4.9",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.5.0",
    "pytest>=7.0.0",
]

[project.scripts]
yt-fetch = "yt_fetch:main"

[project.urls]
Homepage = "https://github.com/SanHsien/yt_fetch"
Repository = "https://github.com/SanHsien/yt_fetch"
Issues = "https://github.com/SanHsien/yt_fetch/issues"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | download
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "venv", "build", "dist", "download"]

[tool.setuptools]
py-modules = ["yt_fetch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

